Character layer added for each tile; only bug is elder seems to be creating invisible minions

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -75,6 +75,8 @@ button:active {
 .body-container::-webkit-scrollbar
 {
     width: 12px;
+    border-radius: 10px;
+    background-color: lightblue;
 }
 
 .body-container::-webkit-scrollbar-thumb
@@ -91,19 +93,6 @@ button:active {
     background-color: orangered;
     z-index: 20;
     opacity: 0;
-}
-
-#testing {
-    position: fixed;
-    height: 10px;
-    z-index: 10;
-    top: 10px;
-    left: 10px;
-    opacity: .1;
-    border: none;
-    border-radius: 2px;
-    box-shadow: none;
-    background: white;
 }
 
 /**
@@ -190,6 +179,7 @@ button:active {
     top: 90px;
     width: 94%;
     height: 40px;
+    padding-bottom: 10px;
     opacity: .7;
     z-index: 5;
 
@@ -207,11 +197,12 @@ button:active {
 #status-messages {
     display: flex ;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     width: 75%;
-    padding: 10px;
+    max-height: 70px;
+    padding: 10px 10px 0;
     text-align: left;
-    color: black;
+    color: white;
     font-size: 1em;
     overflow-y: hidden;
 }
@@ -357,6 +348,34 @@ button:active {
 }
 
 /**
+ * Characters
+ */
+
+.character {
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    z-index: 1;
+    background-repeat: no-repeat;
+}
+
+.character-player {
+    background-image: url('../img/character.png');
+}
+
+.character-shoggoth {
+    background-image: url('../img/shoggoth.png');
+}
+
+.character-elder {
+    background-image: url('../img/elder.png');
+}
+
+.character-zindex-raised {
+    z-index: 2;
+}
+
+/**
  *  Tile Content
  */
 
@@ -368,8 +387,8 @@ button:active {
     background-repeat: no-repeat;
 }
 
-.content-zindex-raised {
-    z-index: 1;
+.content-elder-sign {
+    background-image: url('../img/elder-sign.png');
 }
 
 .content-stairs-up {
@@ -378,22 +397,6 @@ button:active {
 
 .content-stairs-down {
     background-image: url('../img/stairs-down.png');
-}
-
-.content-player {
-    background-image: url('../img/character.png');
-}
-
-.content-shoggoth {
-    background-image: url('../img/shoggoth.png');
-}
-
-.content-elder {
-    background-image: url('../img/elder.png');
-}
-
-.content-elder-sign {
-    background-image: url('../img/elder-sign.png');
 }
 
 /**
@@ -722,7 +725,7 @@ button:active {
     width: 64px;
     height: 64px;
     opacity: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .blood-monster {
@@ -733,7 +736,7 @@ button:active {
     width: 64px;
     height: 64px;
     opacity: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 /*
